--- a/backend/env.example
+++ b/backend/env.example
@@ -21,7 +21,7 @@ EMAIL_HOST = smtp.gmail.com
 EMAIL_PORT = 587
 EMAIL_USE_TLS <bool> = True
 EMAIL_HOST_USER = example@gmail.com
-EMAIL_HOST_PASSWORD = YOURPASSWORD # Your email password or app-specific password
+#EMAIL_HOST_PASSWORD = YOURPASSWORD # Your email password or app-specific password
 DEFAULT_FROM_EMAIL = example@gmail.com  # Optional: default sender email
 
 
