--- a/backend/env.example
+++ b/backend/env.example
@@ -44,3 +44,7 @@ FRONTEND_DIR = ../frontend/
 REPOSITORY_LINK = https://github.com/Simatwa/django-fastapi-boilerplate
 API_PREFIX = /api
 LICENSE = Unspecified
+
+# Cloudflare Captcha
+TURNSTILE_SITE_KEY = your_site_key_here
+TURNSTILE_SECRET_KEY = your_secret_key_here
