feat(.gitignore): Add backend files ignore pattern fix(backend/external/models.py): Add founder role fix(project/settings/config.py): Change database port

--- a/.gitignore
+++ b/.gitignore
@@ -177,11 +177,9 @@ cython_debug/
 exports
 
 # Models
-about
-customuser
-document
-gallery
-static
+backend/files/*
+!backend/files/media/default/*
+
 migrations
 
 commit-*.txt
