feat: Add ModelMixin with model_dump method chore: Update pydantic models to use model_config chore: Update other relevant files to reflect the changes fix: Ignore ckeditor warning

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -43,6 +43,7 @@ FRONTEND_DIR = ../frontend/
 # PROJECT
 REPOSITORY_LINK = https://github.com/Simatwa/django-fastapi-boilerplate
 API_PREFIX = /api
+DJANGO_PRFIX = /d
 LICENSE = Unspecified
 
 # Cloudflare Captcha
