--- a/.env.example
+++ b/.env.example
@@ -28,9 +28,14 @@ DEFAULT_FROM_EMAIL = example@gmail.com  # Optional: default sender email
 # CORS
 # https://pypi.org/project/django-cors-headers/
 
-# CORS_ALLOWED_ORIGINS <list> = 
+# CORS_ALLOWED_ORIGINS <list> = *
 # CORS_ALLOWED_ORIGIN_REGEXES <list> = 
-# CORS_ALLOW_ALL_ORIGINS <list> = 
+# CORS_ALLOW_ALL_ORIGINS <bool> = False
+# ---- FASTAPI SPECIFIC-------
+# CORS_ALLOW_METHODS <list>= GET, POST, PUT, PATCH, DELETE, HEAD
+# CORS_ALLOW_CREDENTIALS <bool> = False
+# CORS_ALLOW_HEADERS <list> = *
+
 
 #UTILS
 CURRENCY = Ksh
@@ -44,8 +49,14 @@ FRONTEND_DIR = ../frontend/
 REPOSITORY_LINK = https://github.com/Simatwa/django-fastapi-boilerplate
 API_PREFIX = /api
 DJANGO_PRFIX = /d
+API_VERSION = 0.1.0
 LICENSE = Unspecified
 
 # Cloudflare Captcha
 TURNSTILE_SITE_KEY = your_site_key_here
 TURNSTILE_SECRET_KEY = your_secret_key_here
+
+# Cloudstorage
+CLOUDSTORAGE_URL = https://example.com
+CLOUDSTORAGE_TOKEN = some-token-here
+DELETE_LOCALFILE <bool> = False
